<resources>
    <string name="app_name">NUS Med Application</string>
    <string name="action_settings">Settings</string>
    <string name="logo_content_description">logo</string>
    <string name="authenticate_button">Authenticate</string>
    <string name="nric_field_helptext">S1234567Z</string>
    <string name="password_field_helptext">Password</string>
    <string name="nric_text">NRIC</string>
    <string name="forgot_password_text">Please approach help-desk \n to reset forgotten passwords.</string>
    <string name="invalid_nric">Enter a valid NRIC</string>
    <string name="invalid_password">Enter a valid password</string>
    <string name="authentication_fail">Authentication failed!</string>
    <string name="authentication_success">Authentication successful!</string>
    <string name="authenticating_text">Authenticating…</string>
    <string name="scan_user_tag_helptext">Hold your phone near the NFC tag.</string>
    <string name="scan_nfc_text">Scan Your Issued NFC Tag</string>
    <string name="cancel_text">Cancel</string>
    <string name="loading_text">Loading…</string>
    <string name="weblogin_button">Web Login</string>
    <string name="weblogin_success">Web login successful!</string>
    <string name="select_role_button">Select Role</string>
    <string name="reauthentication_fail">You have been logged out due to inactivity or there is an issue with your deviceID!</string>
    <string name="weblogin_fail">The web app did not trigger an MFA login!</string>
    <string name="m">3qqX8gbcnwDe3yGyJRStttFjlPxwr9xkvv+W0I3ToVFgIdW9YPhzzkAOs9qGw2likBcXS+TfGRna90FS5QZdPNCKju6nbu+SSoYjo5047PwChG9w4Ofy9PZyPdbyHktWo8BEQx9SeAn1h181p2zInnzLA6Oh1sJPWpnDFIurwtU=</string>
    <string name="e">AQAB</string>
    <string name="return_text">Return</string>
    <string name="patient_upload_record_text">Upload Record</string>
    <string name="record_title">Record Title (max 45 characters)</string>
    <string name="record_title_example">i.e. My Blood Pressure</string>
    <string name="record_description">Record Description (max 120 characters)</string>
    <string name="record_description_hint">Enter description here…</string>
    <string name="record_type_text">Record Type</string>
    <string name="content_text">Content</string>
    <string name="record_content_hint">Enter value here…</string>
    <string name="record_select_file">Select File</string>
    <string name="upload_text">Upload</string>
    <string name="patient_text">Patient</string>
    <string name="therapist_text">Therapist</string>
    <string name="therapist_upload_record_text">Upload Record\n(for patient)</string>
    <string name="therapist_scan_nfc_text">Scan NFC\n(for emergency patient)</string>
    <string name="my_profile_text">My Profile</string>
    <string name="role_text">Role</string>
    <string name="role_patient_text">Role: Patient</string>
    <string name="role_therapist_text">Role: Therapist</string>
    <string name="role_not_selected_text">Role: Not Selected</string>
    <string name="switch_role_text">Switch Role</string>
    <string name="systolic_text">Systolic…</string>
    <string name="diastolic_text">Diastolic…</string>
    <string name="slash_text">/</string>
    <string name="no_available_role">No Available Role!</string>
</resources>
