<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nusmedapplication.PatientActivity">
    <item
        android:id="@+id/action_patient"
        android:title=""
        android:orderInCategory="100"
        android:icon="@mipmap/ic_user_profile_foreground"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_patient_my_profile"
                android:icon="@drawable/ic_biz_card"
                android:title="@string/my_profile_text"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_patient_web_login"
                android:icon="@drawable/ic_scan"
                android:title="@string/weblogin_button"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_patient_switch_role"
                android:icon="@drawable/ic_switch_role"
                android:title="@string/switch_role_text"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
