<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TherapistUploadActivity">

    <TextView
        android:id="@+id/therapistPatientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_text"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/therapistRecordTitleField"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/therapistPatientSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/therapistPatientText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/therapistRecordTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_title"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/therapistRecordTitleField"
        app:layout_constraintTop_toBottomOf="@+id/therapistPatientText" />

    <EditText
        android:id="@+id/therapistRecordTitleField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/record_title_example"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordTitleText"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/therapistRecordDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_description"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/therapistRecordDescriptionField"
        app:layout_constraintTop_toBottomOf="@id/therapistRecordTitleField" />

    <EditText
        android:id="@+id/therapistRecordDescriptionField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/record_description_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordDescriptionText"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/therapistRecordTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_type_text"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/therapistRecordDescriptionField"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordDescriptionField" />

    <Spinner
        android:id="@+id/therapistRecordTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/therapistRecordTypeText"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordDescriptionField" />

    <TextView
        android:id="@+id/therapistRecordContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_text"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/therapistRecordTypeText"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordTypeText" />

    <TextView
        android:id="@+id/therapistRecordContentConstraintText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/therapistRecordContentText"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentText" />

    <EditText
        android:id="@+id/therapistUploadHeightField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/record_content_hint"
        android:inputType="number|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/therapistUploadWeightField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/record_content_hint"
        android:inputType="number|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/therapistUploadTemperatureField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/record_content_hint"
        android:inputType="number|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/therapistUploadSBPField"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/systolic_text"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/therapistRecordContentConstraintText"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/therapistRecordBPSlashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash_text"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="19dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/therapistUploadSBPField"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText" />

    <EditText
        android:id="@+id/therapistUploadDBPField"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/diastolic_text"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/therapistUploadSBPField"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/therapistFileNameText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/therapistRecordContentConstraintText"
        app:layout_constraintTop_toBottomOf="@+id/therapistRecordContentConstraintText" />

    <Button
        android:id="@+id/therapistUploadFileButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/record_select_file"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/therapistFileNameText"
        app:layout_constraintTop_toBottomOf="@+id/therapistFileNameText" />

    <Button
        android:id="@+id/therapistCancelButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel_text"
        android:textColor="@color/cardview_light_background"
        android:background="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="@+id/therapistRecordContentConstraintText"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/therapistSubmitButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        android:text="@string/upload_text"
        android:textColor="@color/cardview_light_background"
        android:background="@color/design_default_color_primary"
        app:layout_constraintLeft_toRightOf="@+id/therapistCancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="PrivateResource" />
</androidx.constraintlayout.widget.ConstraintLayout>