<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <ScrollView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userNRICText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nric_text"
                android:textSize="18sp"
                android:layout_marginTop="200dp" />

            <TextView
                android:id="@+id/userRoleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/role_text"
                android:textSize="18sp"
                android:layout_marginTop="50dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/myProfileReturnButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/return_text"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>